src/objects/MetroclientSubscriptionAmendmentLog__c.object
<CustomObject>
    <description>Metrostudy Provisioning - Remove Product Ammendment log. Tracks the removal of products from a subscription.</description>
    <fields>
        <fullName>AmendmentType__c</fullName>
        <label>Amendment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeNumber__c</fullName>
        <label>Charge Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProvisioningUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provisioning has been updated for this change?</description>
        <label>Provisioning Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscriptionName__c</fullName>
        <label>Subscription Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>Subscription Name + Charge Number + Amendment Name</description>
        <externalId>true</externalId>
        <inlineHelpText>Subscription Name + Charge Number + Amendment Name</inlineHelpText>
        <label>Unique Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Metrostudy Subscription Amendment Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SubscriptionName__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>NAME</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ProvisioningUpdated__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>AmendmentType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUnupdated</fullName>
        <columns>SubscriptionName__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>NAME</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ProvisioningUpdated__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>AmendmentType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProvisioningUpdated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All - Outstanding</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Amendment Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Subscription Amendment Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>